Replace "UTF-8" String by StandardCharsets.UTF_8
- Replace UTF-8 String by StandardCharsets.UTF_8
- Remove all UnsupportedEncodingException try/catch
- Close #1352